MODON MRE BPDEV/force-app/main/default/objects/AppoinmentBooking__c/AppoinmentBooking__c.object-meta.xml
<CustomObject>
    <label>AppoinmentBooking</label>
    <nameField>
        <displayFormat>AB-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppoinmentBookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>