MODON MRE BPDEV/force-app/main/default/objects/AppoinmentBooking__c/fields/Appoinment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appoinment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appoinment Date</label>
    <type>DateTime</type>
</CustomField>