MODON MRE BPDEV/force-app/main/default/objects/AppoinmentBooking__c/fields/Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>