MODON MRE BPDEV/force-app/main/default/objects/AppoinmentBooking__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LeadId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>