MODON MRE BPDEV/force-app/main/default/objects/AppoinmentBooking__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport No</label>
    <length>200</length>
    <type>Text</type>
</CustomField>